// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SaveButton loads while unavailable datasource 1`] = `
<div>
  <button
    class="btn btn-primary"
    type="button"
  >
    ...
  </button>
</div>
`;

exports[`SaveButton renders as expected when datasource ready and not saving 1`] = `
<div>
  <button
    class="btn btn-primary"
    id="save-button"
    type="button"
  >
    <svg
      class="mr-1"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M13 19v-4h3l-4-5-4 5h3v4z"
      />
      <path
        d="M7 19h2v-2H7c-1.654 0-3-1.346-3-3 0-1.404 1.199-2.756 2.673-3.015l.581-.102.192-.558C8.149 8.274 9.895 7 12 7c2.757 0 5 2.243 5 5v1h1c1.103 0 2 .897 2 2s-.897 2-2 2h-3v2h3c2.206 0 4-1.794 4-4a4.01 4.01 0 0 0-3.056-3.888C18.507 7.67 15.56 5 12 5 9.244 5 6.85 6.611 5.757 9.15 3.609 9.792 2 11.82 2 14c0 2.757 2.243 5 5 5z"
      />
    </svg>
    <span>
      Save
    </span>
  </button>
</div>
`;

exports[`SaveButton renders as expected when datasource ready and saving 1`] = `
<div>
  <button
    class="btn btn-primary"
    disabled=""
    id="save-button"
    type="button"
  >
    <svg
      class="mr-1 animate-spin"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2 11h5v2H2zm15 0h5v2h-5zm-6 6h2v5h-2zm0-15h2v5h-2zM4.222 5.636l1.414-1.414 3.536 3.536-1.414 1.414zm15.556 12.728-1.414 1.414-3.536-3.536 1.414-1.414zm-12.02-3.536 1.414 1.414-3.536 3.536-1.414-1.414zm7.07-7.071 3.536-3.535 1.414 1.415-3.536 3.535z"
      />
    </svg>
    <span>
      Saving...
    </span>
  </button>
</div>
`;
